# COMP-SCI-7205-AIML-Research-Project

./: .gitignore  .gitmodules  README.md  background_generation.py  generate-model.py  generate_multiple_scenes.py  generate_scene.py  get_best_scene.py  image-gen.ipynb  model_generation.py  mypy.ini  objects.ipynb  prompts.txt  pyproject.toml  sample_image_to_3d.ipynb  scene_classes.py  shap_e_example.ipynb  structured-outputs.ipynb
Blender/: export.py
Unity/AIML Research Project/Assets/: scene.json  sky 1.mat  sky.mat
Unity/AIML Research Project/Assets/Editor/: CameraScreenshot.cs  ClearGeneratedScenes.cs  GLBImporter.cs  GenerateMutlipleScenes.cs  SetSkyboxFromPNG.cs  Slugifier.cs
Unity/AIML Research Project/Assets/Materials/: AutoSkybox.mat  SpaceSky.mat
Unity/AIML Research Project/Assets/Scenes/: New Scene.unity  SampleScene.unity
Unity/AIML Research Project/Assets/Scenes/SampleScene/: LightingData.asset  ReflectionProbe-0.exr
Unity/AIML Research Project/ProjectSettings/: ProjectSettings.asset
modules/: docker-compose.api.yml
modules/HunyuanWorldAPI/: Dockerfile.panorama-api  docker-compose.runtime.yml
modules/HunyuanWorldAPI/scripts/: startup.sh
