[project]
name = "comp-sci-7205-aiml-research-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "ollama>=0.5.1",
    "pyyaml>=6.0.2",
    "shap-e",
    "torch>=2.7.1",
    "typer>=0.16.0",
]

[tool.uv.sources]
shap-e = { git = "https://github.com/openai/shap-e" }
